added sleep function and fixed some bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
 
-# set the project name
 project(Brainfuckin C)
 
-# add the executable
 add_executable(Brainfuckin brainfuckin.c)
+
+INCLUDE (CheckIncludeFiles)
+
+CHECK_INCLUDE_FILES (unistd.h USE_UNISTD_H)
+CHECK_INCLUDE_FILES (windows.h USE_WINDOWS_H)
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
